2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Indices): Remove unnecessary cross-reference.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (_scroll_forward, _scroll_backward): Set point 
	at beginning (resp. end) of node if going backwards (resp.  
	forwards) failed.  If we did go backwards, put the cursor at the
	beginning of the window.  Change since Texinfo 5.2 reported by
	Benno Schulenberg.

2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forward_move_node_structure): Don't go down a 
	menu for a dir node.  (Broken since 2015-07-13 when N_IsInternal 
	ceased to be set for dir nodes.)
	
2015-08-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Cursor Commands): Remove explanation for 
	having cursor movement commands in Info.  Change "have" to "has" 
	and "identical to" to "the same as".

	* doc/info-stnd.texi (Searching Commands, Index Commands): Split
	Searching Commands in two.

	* doc/info-stnd.texi (Top): Re-jig.
	(Stand-alone Info): Change "ASCII terminal" to "text terminal", 
	to cover e.g. UTF-8 and ISO-8859-1.

	* doc/info-stnd.texi (Search Commands): Move mention of 
	'min-search-length' to end.  Remove repeated information about 
	'}' and '{'.  Remove mention that default search string is 
	displayed between '[' and ']'.  Move paragraph about incremental 
	searching to be next to paragraph about non-incremental 
	searching.  Move description of 'search-next' and 
	'search-previous' commands earlier, and mention that regex use 
	(or not) is also maintained.  Remove unnecessary mention that 
	lines in the same node are not skipped.  Rely more on 
	description for 'search-next', and mention that 
	'search-previous' usually goes back to the same match after a 
	'search-next'.
	(Index Commands) <i>: Remove mention of unreliable feature.

	* doc/info-stnd.texi (Search Commands): Document 'tree-search'.